# theoreticalandcomputationalseismology.github.io

./: .gitignore  README  README.md  environment.yml  genindex.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: deploy_gh_pages.yml
Chapter_1_Kinematics/: 1.00.html
Chapter_2_Dynamics/: 2.00.html
Chapter_4_Linearized_EoM/: 4.00.html
Chapter_5_Anelasticity_Attenuation/: 5.00.html
Chapter_6_Strong_Methods/: 6.00.html  6.01.html  6.02.html  6.03.html  6.04.html  6.05.html  6.06.html  6.07.html  6.08.html  6.09.html  6.10.html  6.10.ipynb  6.11.html  6.11.ipynb  6.12.html  6.12.ipynb  6.13.html  6.13.ipynb  6.14.html  6.14.ipynb  6.3.ipynb  6.4.ipynb  6.5.ipynb  6.6.ipynb  6.7.ipynb  6.8.ipynb  6.9.ipynb
Chapter_7_Weak_Methods/: 7.00.html  7.01.html  7.02.html  7.03.html  7.04.html  7.05.html  7.06.html  7.07.html  7.08.html  7.09.html  7.1.ipynb  7.10.html  7.11.html  7.12.html  7.13.html  7.14.html  7.15.html  7.16.html  7.17.html  7.18.html  7.19.html  7.20.html  7.21.html  7.3.ipynb  7.4.ipynb
_sources/: intro.md
_sources/Chapter_1_Kinematics/: 1.00.md
_sources/Chapter_4_Linearized_EoM/: 4.00.md
_sources/Chapter_6_Strong_Methods/: 6.00.md  6.03.ipynb  6.04.ipynb  6.06.ipynb  6.07.ipynb  6.08.ipynb  6.10.ipynb  6.12.ipynb  6.13.ipynb  6.14.ipynb
_sources/Chapter_7_Weak_Methods/: 7.00.md  7.02.ipynb  7.03.ipynb  7.05.ipynb  7.06.ipynb  7.07.ipynb  7.11.ipynb  7.12.ipynb  7.13.ipynb  7.14.ipynb  7.15.ipynb  7.16.ipynb  7.17.ipynb  7.18.ipynb  7.19.ipynb  (+1 more)
tcs/: _config.yml  _toc.yml  intro.md  requirements.txt
(+39 files in other folders)
