[project]
name = "theoretical_and_global_seismology"
version = "0.3.0"
description = "Kokkos implementation of SPECFEM2D code"
readme = "README.md"
authors = [
  { name = "William Eaton", email = "weaton@princeton.edu" },
  { name = "Congyue Cui", email = "ccui@princeton.edu" },
  { name = "Lucas Sawade", email = "lsawade@princeton.edu" }
]
requires-python = ">=3.12"

[tool.uv]
package = false

[dependency-groups]
all = [
    "jupyter-book",
    "matplotlib~=3.10.1",
    "numpy~=2.2.4",
    "scipy~=1.15.2"    
]
